solc_ossfuzz_seed_corpus/test_sol/test_9777e13bcf4602a4e1f49fa7221837b744bb5b596d455004d54a122e0f28f4b6_742525a0e071ecf18fe9621cadd1273ae0fa03ab_sol.sol
==== Source:  ====

==== Source: su0.sol ====
pragma abicoder v1;
pragma solidity >= 0.0.0;
function f0(bytes memory i0,uint8 i1)  returns(address o0,address o1)
{




  {



  }

}
function f1(bool i0,function () external i1,bool i2)  returns(bytes16 o0,function () external o1)
{
  {

(address l0, address l1) = f0("0410c8b5164f976be9700620b7c6ee",(49 - 194));
  }
  {
  }
  {
(address l2, address l3) = f0("6494243ec41de69f23210d15dbfdc2661bbaf478a0f2d48310cc77e9c69659",((240 - 209) & (228 << 197)));

  }
  (address l4, address l5) = f0("bad43140893deb0820381bd817e9f9",(175 & 227));
}
// ----
// TypeError 9553: (su0.sol:308-318): Invalid type for argument in function call. Invalid implicit conversion from int_const -145 to uint8 requested. Cannot implicitly convert signed literal to unsigned type.
